<resources>
<string name="app_name">Terminal</string>
<string name="login_address">&#160;&#160;&#160;&#160;登录地址</string>
<string name="login_user">&#160;&#160;&#160;&#160;用户名</string>
<string name="login_psd">&#160;&#160;密码</string>
    <string name="login_tv_login">登录</string>
    <string name="home_polycom">POLYCOM</string>
    <string name="home_3g">3G/4G：</string>
    <string name="home_bd">北斗：</string>
    <string name="home_570">CDM570：</string>
    <string name="home_5975">CDR5975：</string>
    <string name="home_video">视频业务</string>
    <string name="home_bd_guide">北斗业务</string>

    <string name="home_data">数据业务</string>
    <string name="home_tools">实用工具</string>
    <string name="home_detail_common">通用</string>
    <string name="home_detail_3g">3G/4G</string>
    <string name="home_detail_bd">北斗</string>
    <string name="home_detail_570">CDM-570</string>
    <string name="home_detail_voip">VoIP</string>
    <string name="home_detail_570_ping">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;PING模块</string>
    <string name="home_detail_item_to_cat_ip">对端卫星猫的IP地址</string>
    <string name="home_detail_item_to_wan_ip">对端路由器WAN口IP地址</string>
    <string name="home_detail_item_to_lan_ip">对端路由器LAN口IP地址</string>
    <string name="home_detail_item_data_change">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数据修改模块</string>
    <string name="home_detail_item_send_hz">发射频率（MHz）</string>
    <string name="home_detail_item_bps">发射数据速率（kbps）</string>
    <string name="home_detail_item_dbm">输出电平（dbm）</string>
    <string name="home_detail_item_state">输出状态</string>
    <string name="home_detail_item_scrambler">发送扰频器状态</string>
    <string name="home_detail_item_receive_hz">接收频率（MHz）</string>
    <string name="home_detail_item_receive_bps">接收数据速率（kbps）</string>
    <string name="home_detail_bt_set">设置</string>
    <string name="home_detail_bt_info">详情</string>




    <string name="error_only_numeric_digits_allowed">Only numeric digits are allowed.</string>
    <string name="error_only_numeric_digits_range_allowed">Only numeric digits within the range %1$s - %2$s are allowed.</string>
    <string name="error_this_field_cannot_contain_special_character">This field cannot contain any special character</string>
    <string name="error_only_standard_letters_are_allowed">Only standard letters are allowed</string>
    <string name="error_field_must_not_be_empty">此处不能为空！</string>
    <string name="error_email_address_not_valid">Email address not valid</string>
    <string name="error_creditcard_number_not_valid">Credit card number is not valid</string>
    <string name="error_phone_not_valid">Phone number not valid</string>
    <string name="error_domain_not_valid">Domain name not valid</string>
    <string name="error_ip_not_valid">IP Address 不正确</string>
    <string name="error_url_not_valid">Web Url is not valid</string>
    <string name="error_notvalid_personname">Not a valid first or last name.</string>
    <string name="error_notvalid_personfullname">Not a valid full name.</string>
    <string name="error_date_not_valid">Format not valid</string>
</resources>
